fix mobile layout bug (overlaping)

--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ h5{
 }
 
 h5.card-title.rounded{
-  height: 55px;
+  height: 90px;
   padding: 0;
   margin: 0;
 }
@@ -545,7 +545,18 @@ div#carouselId {
 
 @media only screen and (max-width: 768px) {
     .card-body {
-        margin-top: 70px;
+        margin-top: 40px;
+        padding: 0.7rem !important;
+    }
+
+    .add-cart {
+        position: absolute;
+        bottom: 10px;
+        right: 5px;
+    }
+
+    i.bi.bi-cart2 {
+        font-size: 1.5rem;
     }
    
     input::-webkit-input-placeholder {
